// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/BusyIndicator Dev 1`] = `
<div
  aria-hidden="false"
  aria-label="Loading"
  className="fd-busy-indicator--m"
>
  <div
    className="fd-busy-indicator--circle-0"
  />
  <div
    className="fd-busy-indicator--circle-1"
  />
  <div
    className="fd-busy-indicator--circle-2"
  />
</div>
`;

exports[`Storyshots Component API/BusyIndicator No Styles 1`] = `
<div
  aria-hidden="false"
  aria-label="Loading"
  className="xxx-busy-indicator--m"
>
  <div
    className="xxx-busy-indicator--circle-0"
  />
  <div
    className="xxx-busy-indicator--circle-1"
  />
  <div
    className="xxx-busy-indicator--circle-2"
  />
</div>
`;

exports[`Storyshots Component API/BusyIndicator Primary 1`] = `
<div
  aria-hidden="false"
  aria-label="Loading"
  className="fd-busy-indicator--m"
>
  <div
    className="fd-busy-indicator--circle-0"
  />
  <div
    className="fd-busy-indicator--circle-1"
  />
  <div
    className="fd-busy-indicator--circle-2"
  />
</div>
`;

exports[`Storyshots Component API/BusyIndicator Sizes 1`] = `
<div
  className="fddocs-container"
>
  <div
    aria-hidden="false"
    aria-label="Loading"
    className="fd-busy-indicator"
  >
    <div
      className="fd-busy-indicator--circle-0"
    />
    <div
      className="fd-busy-indicator--circle-1"
    />
    <div
      className="fd-busy-indicator--circle-2"
    />
  </div>
  <div
    aria-hidden="false"
    aria-label="Loading"
    className="fd-busy-indicator--m"
  >
    <div
      className="fd-busy-indicator--circle-0"
    />
    <div
      className="fd-busy-indicator--circle-1"
    />
    <div
      className="fd-busy-indicator--circle-2"
    />
  </div>
  <div
    aria-hidden="false"
    aria-label="Loading"
    className="fd-busy-indicator--l"
  >
    <div
      className="fd-busy-indicator--circle-0"
    />
    <div
      className="fd-busy-indicator--circle-1"
    />
    <div
      className="fd-busy-indicator--circle-2"
    />
  </div>
</div>
`;
